deleted unnecessary files

--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,8 @@
   <build>
     <finalName>Filmverwaltung</finalName>
   </build>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
