--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,13 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.ejb3</groupId>
             <artifactId>jboss-ejb3-ext-api</artifactId>
             <version>2.1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
